Update README, scripts, and add reproducible IR pipeline